--- a/01-intro/01-hello-world/solution.html
+++ b/01-intro/01-hello-world/solution.html
@@ -1,1 +1,13 @@
 <!-- Напишите решение сюда -->
+
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <title>01-hello-world</title>
+  </head>
+
+  <body>
+    <p class="cat">Hello world</p>
+  </body>
+</html>
