--- a/index.html
+++ b/index.html
@@ -3,8 +3,52 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="./assets/css/main.css">
+
+        <link rel="stylesheet" href="./components/container.css">
+        <link rel="stylesheet" href="./components/header.css">
+        <link rel="stylesheet" href="./components/main.css">
+        <link rel="stylesheet" href="./components/footer.css">
     </head>
     <body>
+        <div class="container">
+            <header class="header">
+                <div class="container__content header__content">
+                    <div class="header__logo-and-nav">
+                        <div class="header__logo">header__logo</div>
 
+                        <div class="header__nav-and-controls">
+                            <nav class="header__nav">header__nav</nav>
+
+                            <nav class="header__controls">header__controls</nav>
+                        </div>
+                    </div>
+
+                    <h1 class="header__title">Reusable component library</h1>
+
+                    <div class="header__tabs">header__tabs</div>
+                </div>
+            </header>
+
+            <main class="main">
+                <div class="container__content main__content">
+                    <div class="main__cards">main__cards</div>
+
+                    <div class="main__controls">main__controls</div>
+                </div>
+            </main>
+
+            <footer class="footer">
+                <div class="container__content footer__content">
+                    <h2 class="header__about">About</h2>
+
+                    <p class="footer__description">
+                        This project is a collection of professionally designed, pre-built, fully responsive
+                        HTML snippets you can drop into your projects. Get started by checking out our free
+                        preview components, or browsing the PNG previews in the categories you're most
+                        curious about.
+                    </p>
+                </div>
+            </footer>
+        </div>
     </body>
 </html>
