Полностью убрал вредные советы использования флексов, вернулся к механизму step-by-step, исправил свои косяки

--- a/index.html
+++ b/index.html
@@ -14,12 +14,6 @@
             <header class="header">
                 <div class="header__logo-and-nav">
                     <div class="header__logo">header__logo</div>
-
-                    <div class="header__nav-and-controls">
-                        <nav class="header__nav">header__nav</nav>
-
-                        <nav class="header__controls">header__controls</nav>
-                    </div>
                 </div>
 
                 <h1 class="header__title">Reusable component library</h1>
@@ -34,7 +28,7 @@
             </main>
 
             <footer class="footer">
-                <h2 class="header__about">About</h2>
+                <h2 class="footer__about">About</h2>
 
                 <p class="footer__description">
                     This project is a collection of professionally designed, pre-built, fully responsive
