--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -6,13 +6,36 @@
         <link rel="stylesheet" href="./accordion.css">
     </head>
     <body>
-        <details>
-            <summary>
-                Accordion item
-            </summary>
-            <p>
-                Hidden content
-            </p>
-        </details>
+        <div class="wrapper">
+            <details class="accordion">
+                <summary class="accordion__summary">
+                    Accordion item 1
+                </summary>
+
+                <div class="accordion__hide-content">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </div>
+            </details>
+
+            <details class="accordion mt-class">
+                <summary class="accordion__summary">
+                    Accordion item 2
+                </summary>
+
+                <div class="accordion__hide-content">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </div>
+            </details>
+
+            <details class="accordion mt-class">
+                <summary class="accordion__summary">
+                    Accordion item 3
+                </summary>
+
+                <div class="accordion__hide-content">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </div>
+            </details>
+        </div>
     </body>
 </html>
