--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -3,6 +3,7 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
+        <link rel="stylesheet" href="./wrapper.css">
         <link rel="stylesheet" href="./button.css">
     </head>
     <body>
