--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -19,7 +19,7 @@
                     </div>
                 </details>
 
-                <details class="accordion__details mt-class">
+                <details class="accordion__details">
                     <summary class="accordion__summary">
                         Accordion item 2
                     </summary>
@@ -29,7 +29,7 @@
                     </div>
                 </details>
 
-                <details class="accordion__details mt-class">
+                <details class="accordion__details">
                     <summary class="accordion__summary">
                         Accordion item 3
                     </summary>
