--- a/index.html
+++ b/index.html
@@ -3,39 +3,50 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="./assets/css/main.css">
-
-        <link rel="stylesheet" href="./components/container.css">
-        <link rel="stylesheet" href="./components/header.css">
-        <link rel="stylesheet" href="./components/main.css">
-        <link rel="stylesheet" href="./components/footer.css">
     </head>
     <body>
-        <div class="container">
-            <header class="header">
-                <div class="header__logo-and-nav">
-                    <div class="header__logo">header__logo</div>
+        <div class="wrapper">
+            <header  class="header">
+                <div class="header__content wrapper__content">
+                    <div class="header__logo-and-nav-and-controls">
+                        header__logo-and-nav-and-controls
+                    </div>
+
+                    <div class="header__title">
+                        Reusable component library
+                    </div>
+
+                    <div class="header__tabs">header__tabs</div>
                 </div>
-
-                <h1 class="header__title">Reusable component library</h1>
-
-                <div class="header__tabs">header__tabs</div>
             </header>
-
             <main class="main">
-                <div class="main__cards">main__cards</div>
+                <div class="main__content wrapper__content">
+                    <div class="main__cards">
+                        <div class="card"></div>
+                        <div class="card"></div>
+                        <div class="card"></div>
+                        <div class="card"></div>
+                        <div class="card"></div>
+                        <div class="card"></div>
+                    </div>
 
-                <div class="main__controls">main__controls</div>
+                    <div class="main__controls">
+                        <button class="button button_alternate">
+                            Load more
+                        </button>
+                    </div>
+                </div>
             </main>
-
             <footer class="footer">
-                <h2 class="footer__about">About</h2>
+                <div class="footer__content wrapper__content">
+                    <h2 class="footer__title">
+                        About
+                    </h2>
 
-                <p class="footer__description">
-                    This project is a collection of professionally designed, pre-built, fully responsive
-                    HTML snippets you can drop into your projects. Get started by checking out our free
-                    preview components, or browsing the PNG previews in the categories you're most
-                    curious about.
-                </p>
+                    <div class="footer__desc">
+                        This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you can drop into your projects. Get started by checking out our free preview components, or browsing the PNG previews in the categories you're most curious about.
+                    </div>
+                </div>
             </footer>
         </div>
     </body>
