--- a/index.html
+++ b/index.html
@@ -22,16 +22,69 @@
             <main class="main">
                 <div class="main__content wrapper__content">
                     <div class="main__cards">
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
-                        <div class="card"></div>
+                        <div class="card main__card">
+                            <div class="card__preview">card__preview</div>
+
+                            <div class="card__bottom">
+                                <div class="card__title">Tooltip</div>
+
+                                <div class="card__desc">Element</div>
+                            </div>
+                        </div>
+
+                        <div class="card main__card">
+                            <div class="card__preview">card__preview</div>
+
+                            <div class="card__bottom">
+                                <div class="card__title">Custom form elements</div>
+
+                                <div class="card__desc">Element</div>
+                            </div>
+                        </div>
+
+                        <div class="card main__card">
+                            <div class="card__preview">card__preview</div>
+
+                            <div class="card__bottom">
+                                <div class="card__title">Calendar</div>
+
+                                <div class="card__desc">Element</div>
+                            </div>
+                        </div>
+
+                        <div class="card main__card">
+                            <div class="card__preview">card__preview</div>
+
+                            <div class="card__bottom">
+                                <div class="card__title">Modal dialog</div>
+
+                                <div class="card__desc">Element</div>
+                            </div>
+                        </div>
+
+                        <div class="card main__card">
+                            <div class="card__preview">card__preview</div>
+
+                            <div class="card__bottom">
+                                <div class="card__title">Histogram</div>
+
+                                <div class="card__desc">Element</div>
+                            </div>
+                        </div>
+
+                        <div class="card main__card">
+                            <div class="card__preview">card__preview</div>
+
+                            <div class="card__bottom">
+                                <div class="card__title">Avatar</div>
+
+                                <div class="card__desc">Element</div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="main__controls">
-                        <button class="button button_alternate">
+                        <button class="button button_alternate main__button">
                             Load more
                         </button>
                     </div>
