--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     </div>
 
                     <div class="main__controls">
-                        <button class="button button_alternate main__button">
+                        <button class="button button_alternate">
                             Load more
                         </button>
                     </div>
