--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -3,9 +3,28 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
+        <link rel="stylesheet" href="./wrap5943832743985hh.css">
         <link rel="stylesheet" href="./skeleton.css">
     </head>
     <body>
+        <div class="wrap5943832743985hh">
+            <div class="skeleton">
+                <div class="skeleton__header">
+                    <div class="skeleton__avatar"></div>
 
+                    <div class="skeleton__titles">
+                        <div class="skeleton__title-1"></div>
+
+                        <div class="skeleton__title-2"></div>
+                    </div>
+                </div>
+
+                <div class="skeleton__content">
+                    <div class="skeleton__content-item"></div>
+
+                    <div class="skeleton__content-item"></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
