--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -10,13 +10,13 @@
         <div class="wrap22-d">
             <div class="histogram">
                 <div class="histogram__header">
-                    <div class="histogram__header-question-and-link">
-                        <div class="histogram__header-question">Total orders</div>
+                    <div class="histogram__header-top">
+                        <div class="histogram__title">Total orders</div>
 
-                        <div class="histogram__header-link">View all</div>
+                        <div class="histogram__link">View all</div>
                     </div>
 
-                    <div class="histogram__header-value">50254</div>
+                    <div class="histogram__total">50254</div>
                 </div>
 
                 <div class="histogram__elements">
