--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -13,9 +13,9 @@
                     <div class="skeleton__avatar"></div>
 
                     <div class="skeleton__titles">
-                        <div class="skeleton__title-1"></div>
+                        <div class="skeleton__title skeleton__title_short"></div>
 
-                        <div class="skeleton__title-2"></div>
+                        <div class="skeleton__title skeleton__title_half"></div>
                     </div>
                 </div>
 
