--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -8,21 +8,23 @@
     </head>
     <body>
         <div class="wrap5943832743985hh">
-            <div class="skeleton">
-                <div class="skeleton__header">
-                    <div class="skeleton__avatar"></div>
+            <div class="where-to-embed">
+                <div class="skeleton">
+                    <div class="skeleton__header">
+                        <div class="skeleton__avatar"></div>
 
-                    <div class="skeleton__titles">
-                        <div class="skeleton__title skeleton__title_short"></div>
+                        <div class="skeleton__titles">
+                            <div class="skeleton__title skeleton__title_short"></div>
 
-                        <div class="skeleton__title skeleton__title_half"></div>
+                            <div class="skeleton__title skeleton__title_half"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div class="skeleton__content">
-                    <div class="skeleton__content-item"></div>
+                    <div class="skeleton__content">
+                        <div class="skeleton__content-item"></div>
 
-                    <div class="skeleton__content-item"></div>
+                        <div class="skeleton__content-item"></div>
+                    </div>
                 </div>
             </div>
         </div>
