--- a/05-lection3/01-tooltip/index.html
+++ b/05-lection3/01-tooltip/index.html
@@ -3,9 +3,18 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
+        <link rel="stylesheet" href="./styles.css">
         <link rel="stylesheet" href="./tooltip.css">
     </head>
     <body>
+        <div class="wrapper">
+            <div class="code-here">
+                <div class="tooltip">
+                    <img src="./images/Icon/Help.svg" alt="help-icon" class="tooltip__icon">
 
+                    <div class="tooltip__help-info">Helper Text</div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
