--- a/05-lection3/03-calendar/index.html
+++ b/05-lection3/03-calendar/index.html
@@ -3,10 +3,77 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
+        <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./calendar.css">
         <title>Calendar</title>
     </head>
     <body>
+        <div class="wrap">
+            <div class="calendar">
+                <div class="calendar__inner">
+                    <div class="calendar__title">October 2019</div>
 
+                    <div class="calendar__outer-wrapper">
+                        <div class="calendar__inner-wrapper">
+                            <div class="calendar__value calendar__value-title">Mon</div>
+                            <div class="calendar__value calendar__value-title">Tue</div>
+                            <div class="calendar__value calendar__value-title">Wed</div>
+                            <div class="calendar__value calendar__value-title">Thu</div>
+                            <div class="calendar__value calendar__value-title">Fri</div>
+                            <div class="calendar__value calendar__value-title">Sat</div>
+                            <div class="calendar__value calendar__value-title">Sun</div>
+
+                            <div class="calendar__value"></div>
+                            <div class="calendar__value"></div>
+                            <div class="calendar__value"></div>
+                            <div class="calendar__value"></div>
+                            <div class="calendar__value">1</div>
+                            <div class="calendar__value">2</div>
+                            <div class="calendar__value">3</div>
+
+                            <div class="calendar__value">4</div>
+                            <div class="calendar__value">5</div>
+                            <div class="calendar__value">6</div>
+                            <div class="calendar__value">7</div>
+                            <div class="calendar__value">8</div>
+                            <div class="calendar__value">9</div>
+                            <div class="calendar__value">10</div>
+
+                            <div class="calendar__value">11</div>
+                            <div class="calendar__value">12</div>
+                            <div class="calendar__value">13</div>
+                            <div class="calendar__value">14</div>
+                            <div class="calendar__value">15</div>
+                            <div class="calendar__value">16</div>
+                            <div class="calendar__value">17</div>
+
+                            <div class="calendar__value calendar__value_range-start-end">18</div>
+                            <div class="calendar__value calendar__value_range">19</div>
+                            <div class="calendar__value calendar__value_range">20</div>
+                            <div class="calendar__value calendar__value_range">21</div>
+                            <div class="calendar__value calendar__value_range">22</div>
+                            <div class="calendar__value calendar__value_range-start-end">23</div>
+                            <div class="calendar__value">24</div>
+
+                            <div class="calendar__value">25</div>
+                            <div class="calendar__value">26</div>
+                            <div class="calendar__value">27</div>
+                            <div class="calendar__value">28</div>
+                            <div class="calendar__value">29</div>
+                            <div class="calendar__value">30</div>
+                            <div class="calendar__value">31</div>
+
+                            <div class="calendar__value"></div>
+                            <div class="calendar__value"></div>
+                            <div class="calendar__value"></div>
+                            <div class="calendar__value"></div>
+                            <div class="calendar__value"></div>
+                            <div class="calendar__value"></div>
+                            <div class="calendar__value"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
