--- a/05-lection3/01-tooltip/index.html
+++ b/05-lection3/01-tooltip/index.html
@@ -7,13 +7,11 @@
         <link rel="stylesheet" href="./tooltip.css">
     </head>
     <body>
-        <div class="wrapper">
-            <div class="code-here">
-                <div class="tooltip">
-                    <img src="./images/Icon/Help.svg" alt="help-icon" class="tooltip__icon">
+        <div class="wrap">
+            <div class="tooltip">
+                <img src="./images/Icon/Help.svg" alt="tooltip icon" class="tooltip__help-icon">
 
-                    <div class="tooltip__help-info">Helper Text</div>
-                </div>
+                <div class="tooltip__help-info">Helper Text</div>
             </div>
         </div>
     </body>
