--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -3,27 +3,27 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
-        <link rel="stylesheet" href="./wrap5943832743985hh.css">
+        <link rel="stylesheet" href="./wrap.css">
         <link rel="stylesheet" href="./skeleton.css">
     </head>
     <body>
-        <div class="wrap5943832743985hh">
-            <div class="where-to-embed">
+        <div class="wrap">
+            <div class="paste-block">
                 <div class="skeleton">
                     <div class="skeleton__header">
                         <div class="skeleton__avatar"></div>
 
-                        <div class="skeleton__titles">
-                            <div class="skeleton__title skeleton__title_short"></div>
+                        <div class="skeleton__title">
+                            <div class="skeleton__line skeleton__line_title-33percent"></div>
 
-                            <div class="skeleton__title skeleton__title_half"></div>
+                            <div class="skeleton__line skeleton__line_title-49percent"></div>
                         </div>
                     </div>
 
                     <div class="skeleton__content">
-                        <div class="skeleton__content-item"></div>
+                        <div class="skeleton__line"></div>
 
-                        <div class="skeleton__content-item"></div>
+                        <div class="skeleton__line"></div>
                     </div>
                 </div>
             </div>
