--- a/05-lection3/01-tooltip/index.html
+++ b/05-lection3/01-tooltip/index.html
@@ -8,11 +8,15 @@
     </head>
     <body>
         <div class="wrap">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate, impedit? Pariatur corporis, quis nostrum quaerat omnis eveniet asperiores quae optio velit id similique reprehenderit harum dolorem, blanditiis illo eligendi laboriosam?
+            Distinctio veniam sequi eius officiis deleniti quasi, ab, excepturi fugit, corporis adipisci vero temporibus cumque quod. Doloremque obcaecati ipsum laboriosam sed dignissimos, placeat debitis corporis sapiente earum necessitatibus magnam beatae!
             <div class="tooltip">
-                <img src="./images/Icon/Help.svg" alt="tooltip icon" class="tooltip__help-icon">
+                <img src="./images/Icon/Help.svg" alt="tooltip icon" class="tooltip__trigger">
 
-                <div class="tooltip__help-info">Helper Text</div>
+                <div class="tooltip__info">Helper Text</div>
             </div>
+            Architecto eius blanditiis ipsa exercitationem molestiae voluptatum, aliquid consequuntur quae nulla est sapiente dolorem quasi, libero alias, asperiores aspernatur necessitatibus perferendis iusto sit voluptatem odio. Eos quisquam vel repudiandae! Vel?
+
         </div>
     </body>
 </html>
