--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -7,6 +7,24 @@
         <link rel="stylesheet" href="./skeleton.css">
     </head>
     <body>
+        <div class="wrap">
+            <div class="skeleton">
+                <div class="skeleton__header">
+                    <div class="skeleton__circle"></div>
 
+                    <div class="skeleton__title">
+                        <div class="skeleton__content"></div>
+
+                        <div class="skeleton__content"></div>
+                    </div>
+                </div>
+
+                <div class="skeleton__body">
+                    <div class="skeleton__content"></div>
+
+                    <div class="skeleton__content"></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
