--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -13,9 +13,9 @@
                     <div class="skeleton__circle"></div>
 
                     <div class="skeleton__title">
-                        <div class="skeleton__content"></div>
+                        <div class="skeleton__content skeleton__content_title-short"></div>
 
-                        <div class="skeleton__content"></div>
+                        <div class="skeleton__content skeleton__content_title-description"></div>
                     </div>
                 </div>
 
