--- a/pages/template.html
+++ b/pages/template.html
@@ -14,9 +14,9 @@
                 </div>
             </header>
 
-            <main class="component-page">
-              <div class="component-page__content wrapper__content">
-                <div class="components-list component-page__select-list">
+            <main class="main main__component-page">
+              <div class="main__component-content wrapper__content">
+                <div class="components-list main__components-list">
                   <div class="components-list__title">Components</div>
 
                   <div class="components-list__list">
@@ -32,7 +32,7 @@
                   </div>
                 </div>
 
-                <div class="component-content component-page__data">
+                <div class="component-content main__selected-component">
                   <div class="component-content__title">Histogram</div>
 
                   <div class="component-content__mount">
@@ -52,7 +52,7 @@
                 </div>
               </div>
 
-              <div class="component-page__footer">
+              <div class="main__footer">
                 Reusable component library
               </div>
             </main>
