--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -8,21 +8,23 @@
     </head>
     <body>
         <div class="wrap">
-            <div class="skeleton">
-                <div class="skeleton__header">
-                    <div class="skeleton__circle"></div>
+            <div class="paste-wrap">
+                <div class="skeleton">
+                    <div class="skeleton__header">
+                        <div class="skeleton__circle"></div>
 
-                    <div class="skeleton__title">
-                        <div class="skeleton__content skeleton__content_title-short"></div>
+                        <div class="skeleton__title">
+                            <div class="skeleton__content skeleton__content_title-short"></div>
 
-                        <div class="skeleton__content skeleton__content_title-description"></div>
+                            <div class="skeleton__content skeleton__content_title-description"></div>
+                        </div>
                     </div>
-                </div>
 
-                <div class="skeleton__body">
-                    <div class="skeleton__content"></div>
+                    <div class="skeleton__body">
+                        <div class="skeleton__content"></div>
 
-                    <div class="skeleton__content"></div>
+                        <div class="skeleton__content"></div>
+                    </div>
                 </div>
             </div>
         </div>
