--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -14,9 +14,9 @@
                         <div class="skeleton__circle"></div>
 
                         <div class="skeleton__title">
-                            <div class="skeleton__content skeleton__content_title-short"></div>
+                            <div class="skeleton__content skeleton__content_short"></div>
 
-                            <div class="skeleton__content skeleton__content_title-description"></div>
+                            <div class="skeleton__content skeleton__content_description"></div>
                         </div>
                     </div>
 
