--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./button.css">
     </head>
     <body>
-        <div class="wrapper">
+        <div class="wrapper-for-buttons">
             <button class="button button_primary">Primary</button>
             <button class="button button_primary" disabled>Primary disabled</button>
 
