--- a/index.html
+++ b/index.html
@@ -7,97 +7,103 @@
     <body>
         <div class="wrapper">
             <header  class="header">
-                <div class="header__content wrapper__content">
-                    <div class="header__logo-and-nav-and-controls">
-                        header__logo-and-nav-and-controls
-                    </div>
+                <div class="container">
+                    <div class="header__content">
+                        <div class="header__logo-and-nav-and-controls">
+                            header__logo-and-nav-and-controls
+                        </div>
 
-                    <div class="header__title">
-                        Reusable component library
-                    </div>
+                        <div class="header__title">
+                            Reusable component library
+                        </div>
 
-                    <div class="header__tabs">header__tabs</div>
+                        <div class="header__tabs">header__tabs</div>
+                    </div>
                 </div>
             </header>
             <main class="main">
-                <div class="main__content wrapper__content">
-                    <div class="main__cards">
-                        <div class="card main__card">
-                            <div class="card__preview">card__preview</div>
+                <div class="container">
+                    <div class="main__content">
+                        <div class="main__cards">
+                            <div class="card main__card">
+                                <div class="card__preview">card__preview</div>
 
-                            <div class="card__bottom">
-                                <div class="card__title">Tooltip</div>
+                                <div class="card__bottom">
+                                    <div class="card__title">Tooltip</div>
 
-                                <div class="card__desc">Element</div>
+                                    <div class="card__desc">Element</div>
+                                </div>
+                            </div>
+
+                            <div class="card main__card">
+                                <div class="card__preview">card__preview</div>
+
+                                <div class="card__bottom">
+                                    <div class="card__title">Custom form elements</div>
+
+                                    <div class="card__desc">Element</div>
+                                </div>
+                            </div>
+
+                            <div class="card main__card">
+                                <div class="card__preview">card__preview</div>
+
+                                <div class="card__bottom">
+                                    <div class="card__title">Calendar</div>
+
+                                    <div class="card__desc">Element</div>
+                                </div>
+                            </div>
+
+                            <div class="card main__card">
+                                <div class="card__preview">card__preview</div>
+
+                                <div class="card__bottom">
+                                    <div class="card__title">Modal dialog</div>
+
+                                    <div class="card__desc">Element</div>
+                                </div>
+                            </div>
+
+                            <div class="card main__card">
+                                <div class="card__preview">card__preview</div>
+
+                                <div class="card__bottom">
+                                    <div class="card__title">Histogram</div>
+
+                                    <div class="card__desc">Element</div>
+                                </div>
+                            </div>
+
+                            <div class="card main__card">
+                                <div class="card__preview">card__preview</div>
+
+                                <div class="card__bottom">
+                                    <div class="card__title">Avatar</div>
+
+                                    <div class="card__desc">Element</div>
+                                </div>
                             </div>
                         </div>
 
-                        <div class="card main__card">
-                            <div class="card__preview">card__preview</div>
-
-                            <div class="card__bottom">
-                                <div class="card__title">Custom form elements</div>
-
-                                <div class="card__desc">Element</div>
-                            </div>
+                        <div class="main__controls">
+                            <button class="button button_alternate">
+                                Load more
+                            </button>
                         </div>
-
-                        <div class="card main__card">
-                            <div class="card__preview">card__preview</div>
-
-                            <div class="card__bottom">
-                                <div class="card__title">Calendar</div>
-
-                                <div class="card__desc">Element</div>
-                            </div>
-                        </div>
-
-                        <div class="card main__card">
-                            <div class="card__preview">card__preview</div>
-
-                            <div class="card__bottom">
-                                <div class="card__title">Modal dialog</div>
-
-                                <div class="card__desc">Element</div>
-                            </div>
-                        </div>
-
-                        <div class="card main__card">
-                            <div class="card__preview">card__preview</div>
-
-                            <div class="card__bottom">
-                                <div class="card__title">Histogram</div>
-
-                                <div class="card__desc">Element</div>
-                            </div>
-                        </div>
-
-                        <div class="card main__card">
-                            <div class="card__preview">card__preview</div>
-
-                            <div class="card__bottom">
-                                <div class="card__title">Avatar</div>
-
-                                <div class="card__desc">Element</div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="main__controls">
-                        <button class="button button_alternate">
-                            Load more
-                        </button>
                     </div>
                 </div>
             </main>
             <footer class="footer">
-                <div class="footer__content wrapper__content">
-                    <h2 class="footer__title">
-                        About
-                    </h2>
+                <div class="container">
+                    <div class="footer__content">
+                        <h2 class="footer__title">
+                            About
+                        </h2>
 
-                    <div class="footer__desc">
-                        This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you can drop into your projects. Get started by checking out our free preview components, or browsing the PNG previews in the categories you're most curious about.
+                        <div class="footer__desc">
+                            This project is a collection of professionally designed, pre-built, fully responsive HTML snippets you can drop into your projects. Get started by checking out our free preview components, or browsing the PNG previews in the categories you're most curious about.
+                        </div>
                     </div>
                 </div>
             </footer>
