main page mobile

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!-- Главная страница -->
 <html lang="ru">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./assets/css/main.css">
     </head>
     <body>
@@ -21,9 +22,11 @@
                     </div>
                 </div>
             </header>
+
             <main class="main">
                 <div class="container">
                     <div class="main__content">
+
                         <div class="main__cards">
                             <div class="card main__card">
                                 <div class="card__preview">card__preview</div>
@@ -91,6 +94,7 @@
                                 Load more
                             </button>
                         </div>
+
                     </div>
                 </div>
             </main>
