новый футер элемент компонента

--- a/pages/template.html
+++ b/pages/template.html
@@ -55,11 +55,15 @@
                   </div>
                 </div>
               </div>
-
-              <div class="main__footer">
-                Reusable component library
-              </div>
             </main>
+
+            <footer class="footer footer__component-page">
+                <div class="container">
+                    <div class="footer__component-content">
+                      Reusable component library
+                    </div>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
