--- a/06-lection4/01-avatar/index.html
+++ b/06-lection4/01-avatar/index.html
@@ -3,9 +3,18 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
+        <link rel="stylesheet" href="./wrap1.css">
         <link rel="stylesheet" href="./avatar.css">
     </head>
     <body>
-
+        <div class="wrap1">
+            <div class="avatar-here">
+                <div class="avatar">
+                    <div class="avatar__inner">
+                        <img src="./public/avatar-200.jpg" class="avatar__image" alt=""/>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
