--- a/06-lection4/03-srcset/index.html
+++ b/06-lection4/03-srcset/index.html
@@ -2,9 +2,14 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
+        <link rel="stylesheet" href="./square-block.css">
         <link rel="stylesheet" href="./srcset.css">
     </head>
     <body>
-
+        <div class="wrap123">
+            <div class="square-block">
+                <img class="square-block__img" src="./public/forest_400.jpg" alt="img" srcset="./public/forest_400.jpg 1x, ./public/forest_768.jpg 2x">
+            </div>
+        </div>
     </body>
 </html>
