templage page mobile finish

--- a/pages/template.html
+++ b/pages/template.html
@@ -2,6 +2,7 @@
 <!-- Главная страница -->
 <html lang="ru">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./../assets/css/main.css">
     </head>
     <body>
@@ -17,7 +18,7 @@
             </header>
 
             <main class="main main__component-page">
-              <div class="container">
+              <div class="container container__component-page">
                 <div class="main__component-content">
                   <div class="components-list main__components-list">
                     <div class="components-list__title">Components</div>
@@ -40,6 +41,7 @@
 
                     <div class="component-content__mount">
                       <!-- Ниже удалить -->
+
                       <svg width="300" height="157" viewBox="0 0 300 157" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <rect width="300" height="157" fill="url(#pattern0)"/>
                         <defs>
