--- a/pages/template.html
+++ b/pages/template.html
@@ -17,8 +17,8 @@
                 </div>
             </header>
 
-            <main class="main main__component-page">
-              <div class="container container__component-page">
+            <main class="main main_component-page">
+              <div class="container container_component-page">
                 <div class="main__component-content">
                   <div class="components-list main__components-list">
                     <div class="components-list__title">Components</div>
@@ -59,7 +59,7 @@
               </div>
             </main>
 
-            <footer class="footer footer__component-page">
+            <footer class="footer footer_component-page">
                 <div class="container">
                     <div class="footer__component-content">
                       Reusable component library
