--- a/07-lection5/01-checkbox/index.html
+++ b/07-lection5/01-checkbox/index.html
@@ -3,9 +3,24 @@
 <html lang="ru">
     <head>
         <link rel="stylesheet" href="../../assets/css/main.css">
+        <link rel="stylesheet" href="./style.css">
         <link rel="stylesheet" href="./checkbox.css">
     </head>
     <body>
+        <div class="wrap543">
+            <label class="checkbox">
+                <input type="checkbox" class="checkbox__input">
 
+                <div class="checkbox__state">
+                    <div class="checkbox__control">
+                        <svg class="checkbox__icon" width="15" height="13" viewBox="0 0 15 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.5 7.5L5 11L13 2" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </div>
+
+                    <div class="checkbox__title">Default</div>
+                </div>
+            </label>
+        </div>
     </body>
 </html>
